--- a/grpc/python/src/setup.cfg
+++ b/grpc/python/src/setup.cfg
@@ -2,13 +2,14 @@
 name= slapi_package
 version = 0.1.0
 author = SLAPI-team
-author_email = mbenzeg@cisco.com
+author_email = sl-api-dev@cisco.com
 description = A package for SL-API
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://wwwin-github.cisco.com/ios-xr/service-layer-objmodel/grpc/python/src
+url = https://github.com/Cisco-Service-Layer/service-layer-objmodel/grpc/python/src
 
 [options]
 packages=sl_api, genpy, util
 install_requires =
     requests
+	
