--- a/grpc/python/src/setup.cfg
+++ b/grpc/python/src/setup.cfg
@@ -1,15 +1,15 @@
 [metadata]
-name = service_layer_objmodel
+name = slapi_package
 version = 0.5.0.0
 author = SLAPI-team
 author_email = sl-api-dev@cisco.com
-description = A package for SL-API
+description = A python package for SL-API
 url = https://github.com/Cisco-Service-Layer/service-layer-objmodel
 
 [options]
 packages =
-    grpc.python.src.sl_api
-    grpc.python.src.genpy
-    grpc.python.src.util
+    sl_api
+    genpy
+    util
 install_requires =
     requests
