--- a/grpc/dotnet/src/gencs/ServiceLayer.csproj
+++ b/grpc/dotnet/src/gencs/ServiceLayer.csproj
@@ -1,8 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Library</OutputType>
+    <Version>1.0.0</Version>
+    <Copyright>Copyright (c) 2023 by cisco Systems, Inc.</Copyright>     
   </PropertyGroup>
 
   <ItemGroup>
