--- a/grpc/dotnet/src/tutorial/Quickstart/Quickstart.csproj
+++ b/grpc/dotnet/src/tutorial/Quickstart/Quickstart.csproj
@@ -10,14 +10,13 @@
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.23.4" />
     <PackageReference Include="Grpc" Version="2.46.6" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.42.0" />
     <PackageReference Include="Grpc.Tools" Version="2.56.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\gencs\ServiceLayer.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <ProjectReference Include="..\..\gencs\ServiceLayer.csproj" />
   </ItemGroup>
 
 </Project>
